<resources>
    <string name="app_name">Quizz</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="start">Aloita Quiz</string>
    <string name="previous">Takaisin</string>
    <string name="next">Seuraava</string>
    <string name="quiz_one">Mikä seuraavista on perinteinen italialainen jouluherkku?</string>
    <string name="quiz_two">Missä maassa voit maistaa kuvan mukaista perinteistä hotpottia?</string>
    <string name="quiz_three">Mikä seuraavista on georgialainen hatsapuri?</string>
    <string name="quiz_four">Kuvan hedelmä haisee pahalle, mutta on Aasian maissa suuri herkku. \nMikä sen nimi on?</string>
    <string name="quiz_five">Mikä näistä on pitaija?</string>
    <string name="backHome">Takaisin alkuun</string>
    <string name="answer">"Vastaa ensin kysymykseen"</string>
    <string name="minus">Vaikuttaa siltä,\n ettet ole vastannut\n kaikkiin kysymyksiin.</string>
    <string name="zero">Kaikki väärin,\n voi ei!</string>
    <string name="one">Yksi oikein,\n jotain sentään!</string>
    <string name="two">Kaksi oikein,\n ensi kerralla enemmän!</string>
    <string name="three">Kolme oikein,\n aika hyvä!</string>
    <string name="four">Neljä oikein,\n hieno juttu</string>
    <string name="five">Kaikki oikein,\n mahtavaa!</string>
    <string name="start_quiz">Tervetuloa Quizz-sovellukseen!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="papaija">Papaija</string>
    <string name="jakkihedelma">Jakkihedelmä</string>
    <string name="durian">Durian</string>
    <string name="englannissa">Englannissa</string>
    <string name="meksikossa">Meksikossa</string>
    <string name="kiinassa">Kiinassa</string>
</resources>